# shibagame-n64

./: .gitignore  README.md
.github/workflows/: ci.yml
scripts/: Dockerfile  build-n64-toolchain.sh  compile-docker.sh
scripts/docker/: compile-docker.sh
src/: CMakeLists.txt  README  crt1.cpp  main.cpp  rom.ld  toolchain.mips64-elf.cmake
